Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/Rep_Product_Line_Target__c.object-meta.xml
<CustomObject>
    <label>Rep Product Line Target</label>
    <nameField>
        <displayFormat>RPLT-{0000}</displayFormat>
        <label>Rep Product Line Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Product Line Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>