Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>