Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Commit_as_of_Stretch_Target__c.field-meta.xml
<CustomField>
    <fullName>Commit_as_of_Stretch_Target__c</fullName>
    <formula>IF (  Commit_Amount__c = 0, 0, ( Commit_Amount__c /   Stretch_Target__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit as % of Stretch Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>