Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Forecast_Stretch_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Stretch_Target_Achievement__c</fullName>
    <formula>IF ( Total_Forecast_Revenue_Stretch__c  = 0, 0, (  Total_Forecast_Revenue_Stretch__c  /   Stretch_Target__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Stretch Target Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>