Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Line_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>