Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Stretch_Target__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Target__c</fullName>
    <label>Stretch Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>