Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Won_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Won_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Won Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>