Perkin-UAT/force-app/main/default/objects/Rep_Product_Line_Target__c/fields/Won_Quantity_vs_Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Won_Quantity_vs_Target_Quantity__c</fullName>
    <formula>IF (  Won_Quantity__c  = 0, 0, ( Won_Quantity__c/  Target_Quantity__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Quantity vs Target Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>